# filemanagement_disk_manager

./: .clang-format  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  disk_manager.gni
common/: BUILD.gn
common/include/: disk_manager_errno.h  disk_manager_napi_errno.h
docs/superpowers/plans/: 2026-06-18-disk-manager-client-singleton-refactor.md
docs/superpowers/specs/: 2026-06-01-disk-manager-ut-design.md  2026-06-18-disk-manager-client-singleton-refactor-design.md
etc/: BUILD.gn
interfaces/innerkits/: BUILD.gn  IDiskManager.idl
interfaces/innerkits/include/: block_info.h  disk.h  disk_manager_client.h  partition_types.h  volume_core.h  volume_external.h
interfaces/innerkits/src/: disk.cpp  disk_manager_client.cpp  partition_types.cpp  volume_core.cpp  volume_external.cpp
interfaces/kits/js/: BUILD.gn
interfaces/kits/js/common/include/: disk_manager_napi_utils.h
interfaces/kits/js/common/src/: disk_manager_napi_utils.cpp
interfaces/kits/js/volume_manager/include/: napi_module_dfs_listener.h  napi_module_dfs_service.h  volumemanager_n_exporter.h
interfaces/kits/js/volume_manager/src/: napi_module_dfs_listener.cpp  napi_module_dfs_service.cpp  volumemanager_n_exporter.cpp  volumemanager_napi.cpp
interfaces/kits/taihe/: BUILD.gn
interfaces/kits/taihe/common/include/: storageStatistics_taihe_error.h
interfaces/kits/taihe/common/src/: storageStatistics_taihe_error.cpp
interfaces/kits/taihe/volume_manager/idl/: ohos.file.volumeManager.taihe
interfaces/kits/taihe/volume_manager/include/: ohos.file.volumeManager.impl.h
interfaces/kits/taihe/volume_manager/src/: ani_constructor.cpp  ohos.file.volumeManager.impl.cpp
patches/: patches.json
sa_profile/: 8640.json  BUILD.gn
services/disk_manager/: BUILD.gn  disk_manager.cfg
services/disk_manager/include/adapter/: istorage_daemon.h  storage_daemon_adapter.h  storage_daemon_proxy.h  usb_fuse_adapter.h
services/disk_manager/include/db/: block_info_table.h  voldata_uuid_store.h
services/disk_manager/include/disk/: disk_config.h  disk_manager.h  partition_table_parser.h  storage_spec_models.h  uevent_bootstrap.h  uevent_env_parser.h
services/disk_manager/include/ipc/: disk_manager_provider.h
services/disk_manager/include/notification/: common_event_publisher.h
services/disk_manager/src/adapter/: storage_daemon_adapter.cpp  storage_daemon_proxy.cpp  usb_fuse_adapter.cpp
services/disk_manager/src/db/: block_info_table.cpp  voldata_uuid_store.cpp
services/disk_manager/src/disk/: disk_config.cpp  disk_manager.cpp  partition_table_parser.cpp  uevent_bootstrap.cpp  uevent_env_parser.cpp
services/disk_manager/src/ipc/: disk_manager_provider.cpp
services/disk_manager/src/notification/: common_event_publisher.cpp
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/diskmanagerstub_fuzzer/: BUILD.gn  diskmanagerstub_fuzzer.cpp  diskmanagerstub_fuzzer.h  project.xml
test/mock/: BUILD.gn  accesstoken_kit.h  disk_manager_mock.h  disk_manager_stub_mock.h  ipc_skeleton.h  message_parcel_mock.cpp  message_parcel_mock.h  mock_accesstoken_kit.cpp  mock_block_info_table.cpp  mock_block_info_table.h  mock_common_event_publisher.cpp  mock_common_event_publisher.h  mock_disk_manager.cpp  mock_disk_manager.h  mock_dlfcn.cpp  mock_dlfcn.h  mock_ipc_skeleton.cpp  mock_ipc_skeleton.h  mock_parameter_find.cpp  mock_parameter_find.h  mock_parameters.cpp  mock_parameters.h  mock_storage_daemon_adapter.cpp  mock_storage_daemon_adapter.h  mock_system_ability_manager.cpp  mock_system_ability_manager.h  mock_uevent_bootstrap.cpp  mock_uevent_bootstrap.h  mock_usb_fuse_adapter.cpp  mock_usb_fuse_adapter.h  mock_voldata_uuid_store.cpp  mock_voldata_uuid_store.h  storage_daemon_adapter.h  storage_daemon_mock.h  uevent_bootstrap.h  usb_fuse_adapter.h
test/mock/adapter/: usb_fuse_adapter.h
test/mock/disk/: uevent_bootstrap.h
test/mock/uevent_bootstrap_mock/db/: block_info_table.h
test/mock/uevent_bootstrap_mock/disk/: disk_manager.h
test/mock/uevent_bootstrap_mock/notification/: common_event_publisher.h
test/unittest/: BUILD.gn  block_info_table_test.cpp  common_event_publisher_test.cpp  disk_config_test.cpp  disk_manager_client_test.cpp  disk_manager_provider_test.cpp  disk_manager_test.cpp  disk_manager_utils_test.cpp  disk_test.cpp  partition_table_parser_test.cpp  partition_types_test.cpp  storage_daemon_adapter_test.cpp  storage_daemon_proxy_test.cpp  uevent_bootstrap_test.cpp  uevent_env_parser_test.cpp  usb_fuse_adapter_test.cpp  voldata_uuid_store_test.cpp  volume_core_test.cpp  volume_external_test.cpp
utils/: BUILD.gn
utils/include/: disk_manager_hilog.h  disk_manager_utils.h  ipc_caller_auth.h
utils/src/: disk_manager_utils.cpp  ipc_caller_auth.cpp
