# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/disk_manager/disk_manager.gni")

## Install disk_config to /system/etc/disk_manager/disk_config
ohos_prebuilt_etc("disk_manager_disk_config") {
  source = "disk_config"
  relative_install_dir = "disk_manager"
  part_name = "disk_manager"
  subsystem_name = "filemanagement"
}