# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/sa_profile/sa_profile.gni")

ohos_sa_profile("disk_manager_sa_profile") {
  sources = [ "8640.json" ]
  part_name = "disk_manager"
}

ohos_prebuilt_etc("disk_manager_cfg") {
  source = "../services/disk_manager/disk_manager.cfg"
  relative_install_dir = "init"
  part_name = "disk_manager"
  subsystem_name = "filemanagement"
}
