# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/idl_tool/idl.gni")
import("//build/ohos.gni")

idl_gen_interface("disk_manager_interface_native") {
  sources = [ "IDiskManager.idl" ]
  log_tag = "DiskManager"
  log_domainid = "0xD00430F"
  hitrace = "HITRACE_TAG_FILEMANAGEMENT"
}

config("disk_manager_idl_public_config") {
  include_dirs = [
    "include",
    "${target_gen_dir}",
  ]
}

ohos_source_set("disk_manager_ipc_native") {
  sanitize = {
    debug = false
    cfi = true
    cfi_cross_dso = true
  }
  output_values = get_target_outputs(":disk_manager_interface_native")
  sources = []
  sources += filter_include(output_values, [ "*.cpp" ])
  public_configs = [ ":disk_manager_idl_public_config" ]
  deps = [ ":disk_manager_interface_native" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
  ]
  part_name = "disk_manager"
  subsystem_name = "filemanagement"
}

ohos_source_set("disk_manager_header") {
  sanitize = {
    debug = false
    cfi = true
    cfi_cross_dso = true
  }
  public_configs = [ ":disk_manager_idl_public_config" ]
  deps = [ ":disk_manager_interface_native" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
  ]
  part_name = "disk_manager"
  subsystem_name = "filemanagement"
}

ohos_shared_library("disk_manager_innerkits") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "src/disk.cpp",
    "src/disk_manager_client.cpp",
    "src/volume_core.cpp",
    "src/volume_external.cpp",
  ]

  defines = [
    "DISK_MANAGER_LOG_TAG = \"DiskManager\"",
    "LOG_DOMAIN = 0xD00430F",
  ]

  public_configs = [ ":disk_manager_idl_public_config" ]
  configs = [
    "//foundation/filemanagement/disk_manager/common:disk_manager_common_include",
    "//foundation/filemanagement/disk_manager/utils:disk_manager_utils_include",
  ]

  cflags = [
    "-D_FORTIFY_SOURCE=2",
    "-fstack-protector-strong",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [
    ":disk_manager_header",
    ":disk_manager_interface_native",
    ":disk_manager_ipc_native",
  ]

  part_name = "disk_manager"
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "filemanagement"
  install_enable = true
}