# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/disk_manager/disk_manager.gni")

config("disk_manager_config") {
  include_dirs = [
    "include",
    "include/disk",
    "include/ipc",
    "include/notification",
    "include/adapter",
  ]

  cflags = [
    "-D_FORTIFY_SOURCE=2",
    "-fstack-protector-strong",
    "-O2",
  ]
}

ohos_shared_library("disk_manager") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "src/disk/uevent_bootstrap.cpp",
    "src/disk/disk_config.cpp",
    "src/disk/disk_manager.cpp",
    "src/disk/partition_table_parser.cpp",
    "src/disk/uevent_env_parser.cpp",
    "src/ipc/disk_manager_provider.cpp",
    "src/notification/common_event_publisher.cpp",
    "src/adapter/storage_daemon_adapter.cpp",
    "src/adapter/storage_daemon_proxy.cpp"
  ]

  defines = [
    "DISK_MANAGER_LOG_TAG = \"DiskManager\"",
    "LOG_DOMAIN = 0xD00430F",
  ]

  configs = [
    ":disk_manager_config",
    "//foundation/filemanagement/disk_manager/common:disk_manager_common_include",
    "//foundation/filemanagement/disk_manager/utils:disk_manager_utils_include",
  ]

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
  install_enable = true
}
