# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

# 本目录下 ohos_unittest 共用：聚合 innerkits IDL 公开头、子系统 config、utils/mock 等；新增用例 configs 仅填本项即可。
config("disk_manager_unittest_common") {
  configs = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_idl_public_config",
    "//foundation/filemanagement/disk_manager/services/disk_manager:disk_manager_config",
    "//foundation/filemanagement/disk_manager/common:disk_manager_common_include",
    "//foundation/filemanagement/disk_manager/utils:disk_manager_utils_include",
    "//foundation/filemanagement/disk_manager/test/mock:disk_manager_mock_include",
  ]
  defines = [
    "DISK_MANAGER_LOG_TAG = \"DiskManager\"",
    "LOG_DOMAIN = 0xD00430F",
  ]
}

ohos_unittest("disk_manager_common_event_publisher_test") {
  module_out_path = "/disk_manager/disk_manager"
  use_exceptions = true

  sources = [
    "common_event_publisher_test.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/notification/common_event_publisher.cpp",
  ]

  configs = [ ":disk_manager_unittest_common" ]

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

ohos_unittest("storage_daemon_proxy_test") {
  module_out_path = "/disk_manager/disk_manager"
  use_exceptions = true

  sources = [
    "storage_daemon_proxy_test.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/adapter/storage_daemon_proxy.cpp",
    "//foundation/filemanagement/disk_manager/test/mock/message_parcel_mock.cpp",
  ]

  configs = [ ":disk_manager_unittest_common" ]

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

group("disk_manager_ut") {
  testonly = true
  deps = [
    ":disk_manager_common_event_publisher_test",
    ":storage_daemon_proxy_test",
  ]
}
