# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/filemanagement/disk_manager/disk_manager.gni")

# 本目录下 ohos_unittest 共用：聚合 innerkits IDL 公开头、子系统 config、utils/mock 等；新增用例 configs 仅填本项即可。
config("disk_manager_unittest_common") {
  configs = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_idl_public_config",
    "//foundation/filemanagement/disk_manager/services/disk_manager:disk_manager_config",
    "//foundation/filemanagement/disk_manager/common:disk_manager_common_include",
    "//foundation/filemanagement/disk_manager/utils:disk_manager_utils_include",
    "//foundation/filemanagement/disk_manager/test/mock:disk_manager_mock_include",
  ]
  defines = [
    "DISK_MANAGER_LOG_TAG = \"DiskManager\"",
    "LOG_DOMAIN = 0xD00430F",
  ]
}

ohos_unittest("disk_manager_common_event_publisher_test") {
  module_out_path = "/disk_manager/disk_manager"
  use_exceptions = true

  sources = [
    "common_event_publisher_test.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/notification/common_event_publisher.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/disk/disk_manager.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/disk/disk_config.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/disk/partition_table_parser.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/db/block_info_table.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/db/voldata_uuid_store.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/adapter/storage_daemon_adapter.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/adapter/usb_fuse_adapter.cpp",
  ]

  configs = [ ":disk_manager_unittest_common" ]

  if (car_device_enable) {
    defines = [ "CDC_STORAGE" ]
  }

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

ohos_unittest("storage_daemon_proxy_test") {
  module_out_path = "/disk_manager/disk_manager"
  use_exceptions = true

  sources = [
    "storage_daemon_proxy_test.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/adapter/storage_daemon_proxy.cpp",
    "//foundation/filemanagement/disk_manager/test/mock/message_parcel_mock.cpp",
  ]

  configs = [ ":disk_manager_unittest_common" ]

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

ohos_unittest("disk_manager_client_test") {
  module_out_path = "/disk_manager/disk_manager"
  use_exceptions = true

  sources = [
    "disk_manager_client_test.cpp",
    "//foundation/filemanagement/disk_manager/interfaces/innerkits/src/disk_manager_client.cpp",
    "//foundation/filemanagement/disk_manager/interfaces/innerkits/src/disk.cpp",
    "//foundation/filemanagement/disk_manager/interfaces/innerkits/src/partition_types.cpp",
    "//foundation/filemanagement/disk_manager/interfaces/innerkits/src/volume_core.cpp",
    "//foundation/filemanagement/disk_manager/interfaces/innerkits/src/volume_external.cpp",
  ]

  configs = [ ":disk_manager_unittest_common" ]

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_ipc_native",
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_header",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

ohos_unittest("uevent_env_parser_test") {
  module_out_path = "/disk_manager/disk_manager"
  use_exceptions = true

  sources = [
    "uevent_env_parser_test.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/disk/uevent_env_parser.cpp",
  ]

  configs = [ ":disk_manager_unittest_common" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

ohos_unittest("disk_manager_test") {
  module_out_path = "/disk_manager/disk_manager"
  use_exceptions = true

  sources = [
    "disk_manager_test.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/disk/disk_manager.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/disk/disk_config.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/disk/partition_table_parser.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/db/block_info_table.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/db/voldata_uuid_store.cpp",
    "//foundation/filemanagement/disk_manager/services/disk_manager/src/notification/common_event_publisher.cpp",
    "//foundation/filemanagement/disk_manager/test/mock/mock_storage_daemon_adapter.cpp",
    "//foundation/filemanagement/disk_manager/test/mock/mock_usb_fuse_adapter.cpp",
    "//foundation/filemanagement/disk_manager/test/mock/message_parcel_mock.cpp",
  ]

  configs = [ ":disk_manager_unittest_common" ]

  defines = [
    "StorageDaemonAdapter=MockStorageDaemonAdapter",
    "UsbFuseAdapter=MockUsbFuseAdapter",
  ]

  if (car_device_enable) {
    defines += [ "CDC_STORAGE" ]
  }

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

group("disk_manager_ut") {
  testonly = true
  deps = [
    ":disk_manager_common_event_publisher_test",
    ":storage_daemon_proxy_test",
    ":disk_manager_client_test",
    ":uevent_env_parser_test",
    ":disk_manager_test",
  ]
}
