# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/disk_manager/disk_manager.gni")

ohos_shared_library("volumemanager") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  relative_install_dir = "module/file"
  subsystem_name = "filemanagement"
  part_name = "disk_manager"

  include_dirs = [
    "common/include",
    "volume_manager/include",
    "//foundation/filemanagement/disk_manager/interfaces/innerkits/include",
    "//foundation/filemanagement/disk_manager/utils/include",
  ]

  configs = [
    "//foundation/filemanagement/disk_manager/common:disk_manager_common_include",
  ]

  sources = [
    "common/src/disk_manager_napi_utils.cpp",
    "volume_manager/src/volumemanager_n_exporter.cpp",
    "volume_manager/src/volumemanager_napi.cpp",
  ]

  defines = [
    "DISK_MANAGER_LOG_TAG = \"DiskManager\"",
    "LOG_DOMAIN = 0xD00430F",
  ]

  cflags = [
    "-D_FORTIFY_SOURCE=2",
    "-fstack-protector-strong",
    "-fPIC",
    "-ffunction-sections",
    "-fdata-sections",
    "-fvisibility=hidden",
  ]

  deps = [
    "//foundation/filemanagement/disk_manager/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "file_api:filemgmt_libhilog",
    "file_api:filemgmt_libn",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (disk_manager_dfs_filemanager) {
    defines += [ "HMDFS_FILE_MANAGER" ]
    sources += [
      "volume_manager/src/napi_module_dfs_listener.cpp",
      "volume_manager/src/napi_module_dfs_service.cpp",
    ]
    external_deps += [ "dfs_service:distributed_file_daemon_kit_inner" ]
  }
}

group("disk_manager_js") {
  deps = [
    ":volumemanager",
  ]
}
