# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

disk_manager_path = "//foundation/filemanagement/disk_manager"

ohos_fuzztest("DiskmanagerStubFuzzTest") {
  module_out_path = "disk_manager/disk_manager"
  fuzz_config_file = disk_manager_path + "/test/fuzztest/diskmanagerstub_fuzzer"

  include_dirs = [
    disk_manager_path + "/services/disk_manager/include",
    disk_manager_path + "/services/disk_manager/include/ipc",
    disk_manager_path + "/services/disk_manager/include/disk",
    disk_manager_path + "/services/disk_manager/include/notification",
    disk_manager_path + "/services/disk_manager/include/adapter",
  ]

  sources = [
    disk_manager_path + "/test/fuzztest/diskmanagerstub_fuzzer/diskmanagerstub_fuzzer.cpp",
    disk_manager_path + "/services/disk_manager/src/ipc/disk_manager_provider.cpp",
    disk_manager_path + "/services/disk_manager/src/disk/uevent_bootstrap.cpp",
    disk_manager_path + "/services/disk_manager/src/disk/uevent_env_parser.cpp",
    disk_manager_path + "/services/disk_manager/src/disk/disk_config.cpp",
    disk_manager_path + "/services/disk_manager/src/disk/disk_manager.cpp",
    disk_manager_path + "/services/disk_manager/src/disk/partition_table_parser.cpp",
    disk_manager_path + "/services/disk_manager/src/notification/common_event_publisher.cpp",
    disk_manager_path + "/services/disk_manager/src/adapter/storage_daemon_adapter.cpp",
    disk_manager_path + "/services/disk_manager/src/adapter/storage_daemon_proxy.cpp",
    disk_manager_path + "/services/disk_manager/src/adapter/usb_fuse_adapter.cpp",
  ]

  configs = [
    disk_manager_path + "/services/disk_manager:disk_manager_config",
    disk_manager_path + "/common:disk_manager_common_include",
    disk_manager_path + "/utils:disk_manager_utils_include",
    disk_manager_path + "/interfaces/innerkits:disk_manager_idl_public_config",
  ]

  defines = [
    "DISK_MANAGER_LOG_TAG = \"DiskManager\"",
    "LOG_DOMAIN = 0xD00430F",
  ]

  deps = [
    disk_manager_path + "/interfaces/innerkits:disk_manager_innerkits",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  subsystem_name = "filemanagement"
  part_name = "disk_manager"
}

group("diskmanagerstub_fuzztest") {
  testonly = true
  deps = [ ":DiskmanagerStubFuzzTest" ]
}